# PY175

./: app.py  echo_server.py  roll_dice.py
book_viewer_starter/: app.py  importer.py  pyproject.toml
book_viewer_starter/templates/: 404.html  chapter.html  home.html  layout.html  search.html
book_viewer_starter_2/: app.py
book_viewer_starter_2/templates/: chapter.html  home.html  layout.html  search.html
cms/: app.py  generate_hashes.py  pyproject.toml  users.yml
cms/data/: about.md  changes.txt  history.txt
cms/templates/: create.html  edit.html  index.html  layout.html  signin.html
cms/tests/: test.app.py  test_app.py  users.yml
code_challenge/: app.py  pyproject.toml  users.yaml
code_challenge/templates/: base.html  index.html  user.html
code_challenge_2/: app.py  pyproject.toml  users.yaml
code_challenge_2/templates/: layout.html  user.html  users.html
code_challenge_3/: app.py  pyproject.toml  users.yaml
code_challenge_3/templates/: index.html  layout.html  user.html
templates/: layout.html  list.html  lists.html
todo_starter/: app.py
todo_starter/templates/: edit_list.html  lists.html  new_list.html
todo_starter/todos/: utils.py
todo_starter_2/: app.py  new_list.html
todo_starter_2/templates/: edit_list.html  layout.html  list.html  lists.html  new_list.html
todo_starter_2/todos/: utils.py
todo_starter_2_175/: app.py
